<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/first_name_field"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/short_field"
        android:hint="@string/name"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/family_name_field"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:background="@drawable/short_field"
        android:hint="@string/family_name_hint"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"/>

    </LinearLayout>

    <EditText
        android:id="@+id/login_field"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/field"
        android:hint="@string/login_hint"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/field"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/register_button"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/field"
            android:fontFamily="@font/montserrat"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>